# PyDataEngineerBoilerplate

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: data_catalog.yaml  dev.yaml  monitoring.yaml  prod.yaml  staging.yaml  streaming.yaml
config/spark/: metrics.properties  spark-defaults.conf
docs/tutorial/: 10. QAs.md
scripts/: run_streaming.sh
src/config/: settings.py  spark_config.py
src/jobs/: base_job.py
src/jobs/etl/: incremental_etl.py  sample_etl.py  streaming_etl.py
src/orchestrators/: airflow_batch_dag.py  airflow_dag.py  airflow_streaming_dag.py  prefect_flow.py
src/readers/: database_reader.py  file_reader.py  streaming_reader.py
src/schemas/: data_schemas.py  schema_evolution.py
src/transformations/: aggregations.py  data_transformations.py  joins.py  window_functions.py
src/utils/: data_quality.py  lineage.py  monitoring.py  performance_utils.py  secrets_manager.py  spark_utils.py
src/validations/: sample_expectation_suite.py
src/writers/: database_writer.py  file_writer.py  streaming_writer.py
tests/: conftest.py
tests/unit/: test_transformations.py
